hphp/hack/test/typecheck/inout/bad_inout_use_lvalue8.php.exp
File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
?-> syntax is not supported for inout (Parsing[1002])
